--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "devDependencies": {
         "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
+        "cz-conventional-changelog": "^3.3.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.5.6",
         "preline": "^1.9.0",
         "tailwindcss": "^3.4.17",
         "vite": "^5.0.0"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
